...
    <string name="button_clear">Clear</string>
    <string name="button_close">Close</string>
    <string name="button_create_new_transfer">New transfer</string>
    <string name="button_delete_transfer">Delete transfer</string>
    <string name="button_download_invitation">Save .vnd file</string>
    <string name="button_native_share">Share invitation</string>
    <string name="button_open_settings">Open Settings</string>
    <string name="button_receive">Receive</string>
    <string name="button_receive_files">Start receiving</string>
    <string name="button_refuse">Refuse</string>
    <string name="button_remove_file">Remove file</string>
    <string name="button_reset_default">Use default</string>
    <string name="button_retry">Retry</string>
...
    <string name="notifications_description">Get notified about transfer activity while VniDrop is in the background.</string>
    <string name="notifications_enable_action">Enable</string>
    <string name="notifications_enabled_message">Notifications enabled.</string>
    <string name="notifications_request_prompt">Notifications are off. Enable them to be notified about future requests.</string>
    <string name="notifications_sharing_prompt">Enable notifications so you don’t miss requests while VniDrop is in the background.</string>
    <string name="notifications_local_title">Allow notifications</string>
    <string name="notifications_permission_denied">Notifications are turned off for VniDrop. You can enable them in Settings.</string>
    <string name="notifications_receive_completed_body">“%1$s” finished downloading.</string>
    <string name="notifications_receive_completed_title">Download complete</string>
    <string name="notifications_receive_failed_body">“%1$s” couldn’t be received.</string>
    <string name="notifications_receive_failed_title">Download failed</string>
    <string name="notifications_receiver_completed_body">%1$s finished receiving “%2$s”.</string>
    <string name="notifications_receiver_completed_title">Transfer received</string>
...
