...
	SnackbarHost(hostState = hostState, modifier = modifier) { data ->
		val colors = LocalVniDropColors.current
		if (LocalUiPlatform.current == UiPlatform.Android) {
			Snackbar(
				data,
				actionOnNewLine = data.visuals.actionLabel != null,
				modifier = Modifier.padding(12.dp).testTag("android-snackbar"),
				containerColor = colors.backgroundDialog,
				contentColor = colors.foregroundDefault,
				actionColor = colors.brandLink,
				actionContentColor = colors.brandLink,
				dismissActionContentColor = colors.foregroundLighter,
			)
...
